test/frontend/fail/primitive_operator.osl
float __operator__add__(float x, float y) { return 42; }
shader foo() {}
